# agnes-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  DOCKER_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: Dockerfile  Dockerfile.mcp  docker-compose.yml
docs/research/: hybrid-search-implementation.md
documents/: README.md
documents/unnes/: FAQ Database Unnes Apr 30.txt  FAQ Database Unnes Jun 06.txt  Tentang UNNES 1.txt  Tentang UNNES 2.txt
scripts/: healthcheck.py  start.sh  stop.sh  test-docker.sh
src/api/: __init__.py  app.py  dependencies.py  middleware.py  models.py  routes.py
src/chat/: __init__.py  chain.py  memory.py  prompts.py
src/config/: settings.py
src/core/: embeddings.py  llm.py  vectorstore.py
src/ingestion/: __init__.py  chunker.py  loader.py  pipeline.py
src/mcp/: __init__.py  __main__.py  resources.py  server.py  tools.py
src/retrieval/: __init__.py  bm25.py  hybrid.py  reranker.py  retriever.py
src/utils/: exceptions.py  logging.py
tests/: conftest.py  strategies.py
tests/data/: sample.md  sample.txt
tests/unit/: test_api_models.py  test_api_routes.py  test_chain.py  test_chunker.py  test_embeddings.py  test_exceptions.py  test_ingestion_pipeline.py  test_llm.py  test_loader.py  test_logging.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_tools.py  test_memory.py  test_prompts.py  test_reranker.py  test_retriever.py  test_settings.py  test_vectorstore.py
